<resources>
    <string name="app_name">Track Cam Monitor</string>

    <!-- Preferences -->
    <string name="prefs__button_title">Preferences</string>
    <string name="prefs__activity_title">Preferences</string>

    <string name="prefs__system_header">System</string>
    <string name="prefs__start_on_boot_title">Start Automatically on Boot</string>
    <string name="prefs__start_on_boot_on">On: App starts automatically on boot</string>
    <string name="prefs__start_on_boot_off">Off: App does not start automatically on boot</string>
    <string name="prefs__home_title">Replace Home Launcher</string>
    <string name="prefs__home_on">On: Replaces the default Home Launcher</string>
    <string name="prefs__home_off">Off: Does not replace the default Home Launcher</string>
    <string name="prefs__hide_nav_bar_title">Hide Navigation Bar</string>
    <string name="prefs__hide_nav_bar_on">On: Do not display navigation bar (e.g. home &amp; back icons)</string>
    <string name="prefs__hide_nav_bar_off">Off: Display navigation bar (e.g. home &amp; back icons)</string>
    <string name="prefs__only_on_ac_power_title">Stream only on AC Power</string>
    <string name="prefs__only_on_ac_power_on">On: Video streaming runs automatically on AC Power</string>
    <string name="prefs__only_on_ac_power_off">Off: Video streaming does not run automatically on AC Power</string>
    <string name="prefs__debug_display_title">Debug Display</string>
    <string name="prefs__debug_display_on">On: Display debug controls and state</string>
    <string name="prefs__debug_display_off">Off: Does not display debug controls and state</string>
    <string name="prefs__wifi_ssid_title">SSID of Wifi Network to monitor</string>

    <string name="prefs__cameras_header">Cameras</string>
    <string name="prefs__cameras_count_title">Number of Active Cameras</string>
    <string name="prefs__url_camera_1">URL Stream Camera 1</string>
    <string name="prefs__url_camera_2">URL Stream Camera 2</string>
    <string name="prefs__cameras_rotation_title_1">Rotation Camera 1</string>
    <string name="prefs__cameras_rotation_title_2">Rotation Camera 2</string>
    <string name="prefs__zoom_camera_1">Zoom Camera 1</string>
    <string name="prefs__zoom_camera_2">Zoom Camera 2</string>
    <string name="prefs__offset_camera_1">Offset X;Y Camera 1</string>
    <string name="prefs__offset_camera_2">Offset X;Y Camera 2</string>
    <string name="main__video_camera_1">Video Camera 1</string>
    <string name="main__video_camera_2">Video Camera 2</string>
    <string name="main__starting_cam">Starting Cam %1$d</string>
    <string name="main__stopped_cam">Stopped Cam %1$d</string>
</resources>
