<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Note: keys cannot change once published. -->

    <PreferenceCategory app:title="@string/prefs__system_header">

        <SwitchPreferenceCompat
                app:key="pref_system__start_on_boot"
                app:summaryOff="@string/prefs__start_on_boot_off"
                app:summaryOn="@string/prefs__start_on_boot_on"
                app:title="@string/prefs__start_on_boot_title" />

        <SwitchPreferenceCompat
                app:key="pref_system__home"
                app:summaryOff="@string/prefs__home_off"
                app:summaryOn="@string/prefs__home_on"
                app:title="@string/prefs__home_title" />

        <SwitchPreferenceCompat
                app:key="pref_system__hide_nav_bar"
                app:summaryOff="@string/prefs__hide_nav_bar_off"
                app:summaryOn="@string/prefs__hide_nav_bar_on"
                app:title="@string/prefs__hide_nav_bar_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/prefs__cameras_header">

        <ListPreference
                app:key="pref_cameras__count"
                app:title="@string/prefs__cameras_count"
                app:useSimpleSummaryProvider="true" />

        <EditTextPreference
                app:key="pref_cameras__url_1"
                app:title="@string/prefs__url_camera_1"
                app:useSimpleSummaryProvider="true" />

        <EditTextPreference
                app:key="pref_cameras__url_2"
                app:title="@string/prefs__url_camera_2"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
